--- a/source/posts/2012-09-14.md
+++ b/source/posts/2012-09-14.md
@@ -22,6 +22,6 @@
 * [Это со мной что-то не так, или продукцию Apple теперь сложно использовать?](http://battellemedia.com/archives/2012/09/am-i-an-outlier-or-are-apple-products-no-longer-easy-to-use.php) - задает вопрос автор.
 * [Ура! Для iOS можно писать на Java](http://google-opensource.blogspot.co.uk/2012/09/j2objc-java-to-ios-objective-c.html) через транслятор кода в objc. Решение страшное, но куда деваться, если очень хочется? #java #opensource
 * [Престаньте слать темплейты в браузер](http://andyet.net/blog/2012/sep/13/stop-sending-template-engines-to-the-browser-a-ret/), пишет Хенрик Джоретег. И предлагает банальный способ, всё делать на сервере, это у него выходит в 10 раз быстрее. Он просто трафик не считает, как обычно. #template #html #js
-* [Джими Киммел опять поимел всех](www.youtube.com/watch?v=rdIWKytq_q4). Видео, как людям давали «подержать в руках пятый айфон». #video #fun
+* [Джими Киммел опять поимел всех](http://www.youtube.com/watch?v=rdIWKytq_q4). Видео, как людям давали «подержать в руках пятый айфон». #video #fun
 * [Dropbox перешли на кофискрипт, вместо джаваскрипта](https://tech.dropbox.com/?p=361) и это правильно. Я тоже везде, где мог перешел. Но у меня причина другая. Они говорят что CoffeeScript более правильный. А я просто не осилил синтаксис JS :( #coffee
 * [Boot snip - набор снипетов для твиттер-бутстрапа](http://bootsnipp.com/). Всё же для всех, кто не умеет дизайнит, bootstrap это настоящее спасение. #bootstrap
