визуализация использования pin-кодов

--- a/source/posts/2012-09-19.md
+++ b/source/posts/2012-09-19.md
@@ -29,6 +29,7 @@
 * [Автор rBus рассказывает о том, как он мигрировал с Mongo](http://svs.io/post/31724990463/why-i-migrated-away-from-mongodb). Это в последнее время часто, потому что Mongo isn’t cool already :)
 * [Прочитал первую строчку: «Редактирование текста это нечто противоположное перехвату исключений»](http://bosker.wordpress.com/2012/05/10/on-editing-text/). И не смог остановиться пока не дочитал до конца. Небольшая статья, требующая знаний основ математики.
 * [Простой учебник «как писать html5 приложения на Dart»](http://www.drdobbs.com/open-source/dart-build-html5-apps-fast/240005631). Вот этот язык уже точно не жилец, а Go может быть еще побарахтается.
+* [Небольшая визуализация](http://www.datagenetics.com/blog/september32012/index.html) частоты использования 4-значных pin-кодов. «Самым редким является (являлся?) 8068». Внезапно так. 
 
 ## Разное
 * [В России раскупорили месторождение, в котором триллионы каратов алмазов!](http://www.csmonitor.com/World/Global-News/2012/0917/Russia-reveals-shiny-state-secret-It-s-awash-in-diamonds) Теперь рынок алмазов рухнет! Мы все обречены! Обреченыыыыы! На самом деле нет, там не ювелирные алмазы, там технические материалы, которые используются при абразивных работах. Действительно уникальные материалы, в 2-3 раза прочнее аналогов.
