--- a/source/posts/2012-09-26.md
+++ b/source/posts/2012-09-26.md
@@ -2,6 +2,8 @@
 
 Это не «тема дня», это «абзац дня». Сегодня мне прислали ссылку [на историческое письмо  Марка Андерссена](http://1997.webhistory.org/www.lists/www-talk.1993q1/0182.html). В 93 году он предложил новый HTML тег - &lt;IMG SRC=«чтонибудь»&gt;, вставляющий изображение прямо по месту, в тексте. И внезапно мне подумалось. Вот, будь у меня машина времени, я бы наверняка перенесся в прошлое и стал бы писать в *www-talk*. Я бы требовал ни в коем случае не использовать этот тег. Показал бы, как выглядел интернет начала двухтысячных. Показал бы [всю историю интернета](http://www.webdirections.org/history/) и к чему это нас привело. Как бы прекрасен был интернет, без всего этого мигающего и переливающегося, вы представляете?
 
+![center](http://www.onux.be/wp-content/image_not_found.gif)
+
 -----
 
 ## Для всех
