--- a/source/posts/2012-09-26.md
+++ b/source/posts/2012-09-26.md
@@ -7,7 +7,7 @@
 -----
 
 ## Для всех
-* [Мой любимый SublePatterns снова в строю](http://subtlepatterns.com). У них домен кто-то упёр, но они его вернули.
+* [Мой любимый Subtle Patterns снова в строю](http://subtlepatterns.com). У них домен кто-то упёр, но они его вернули.
 * [У гугла новая маркетинговая фишка - подводные панораммы Большого Барьерного Рифа](http://googleblog.blogspot.com/2012/09/dive-into-great-barrier-reef-with-first_25.html). Крутая идея. Бесполезная с практической точки зрения, но **очень** красиво, прямо как я люблю!
 * [notfound.org - отличная идея, показывать на 404ых страницах информацию о потерянных детях](http://notfound.org). Это не шутка, это правда гениально. Вообще утилизация 404ых страниц очень низкая, особенно у больших компаний.
 * [Tent.is вышел в альфу](https://tent.is). Это такая штука, как-бы распределенный типа твиттер. Я про него писал с пару месяцев назад.
