--- a/source/posts/2012-09-26.md
+++ b/source/posts/2012-09-26.md
@@ -10,7 +10,7 @@
 * [Мой любимый SubtlePatterns снова в строю](http://subtlepatterns.com). У них домен кто-то упёр, но они его вернули.
 * [У гугла новая маркетинговая фишка - подводные панораммы Большого Барьерного Рифа](http://googleblog.blogspot.com/2012/09/dive-into-great-barrier-reef-with-first_25.html). Крутая идея. Бесполезная с практической точки зрения, но **очень** красиво, прямо как я люблю!
 * [notfound.org - отличная идея, показывать на 404-х страницах информацию о потерянных детях](http://notfound.org). Это не шутка, это правда гениально. Вообще утилизация 404-х страниц очень низкая, особенно у больших компаний.
-* [Tent.is вышел в альфу](https://tent.is). Это такая штука, как-бы распределённый типа твиттер. Я про него писал с пару месяцев назад.
+* [Tent.is вышел в альфу](https://tent.is). Это такая штука, как-бы распределённый типа твиттер. Я про него [писал](/post/2012-08-23/) с пару месяцев назад.
 * [На ET обсуждают возможности рейтрейсинга в игровой индустрии](http://www.extremetech.com/gaming/135788-investigating-ray-tracing-the-next-big-thing-in-gaming-graphics). Имхо это вряд ли возможно, при нынешнем развитии техники.
 
 ## Для гиков
