--- a/source/posts/2012-10-11.md
+++ b/source/posts/2012-10-11.md
@@ -18,11 +18,11 @@
 * Я вообще всегда улыбаюсь тому, как устроены нынешние биржи. Вот например [Зинга сейчас оценивается на бирже дешевле, чем её наличка в банке](http://www.latimes.com/entertainment/envelope/cotown/la-et-ct-zynga-stock-plummets-20121005,0,5240403.story?twitter). Где логика? Ну, никто не верит в их успех. При этом успех в общем-то есть. Есть деньги в банке, есть активы, есть постоянный доход.
 
 ## Для гиков
-* [Пинки Пай опять!](http://www.scmagazine.com.au/News/318677,teenager-cracks-chrome-again.aspx) Помните, он пол года назад на Pwnium так же удачно сломал хром, и вот опять. Всё же чем дальше я на это смотрю, тем больше паникую. Что один человек написал, второй завсегда сломать может.
+* [Пинки Пай опять!](http://www.scmagazine.com.au/News/318677,teenager-cracks-chrome-again.aspx) Помните, он полгода назад на Pwnium так же удачно сломал хром, и вот опять. Всё же чем дальше я на это смотрю, тем больше паникую. Что один человек написал, второй завсегда сломать может.
 * [Стайлгайды гугла по лиспу еще ужаснее, чем аналогичные по плюсам](https://google-styleguide.googlecode.com/svn/trunk/lispguide.xml). Но. Почет и уважение за то, что они вообще есть.  Особенно порадовала строчка «Indent your code the way GNU Emacs does». И еще одна «You should avoid side-effects when they are not necessary» :)
 * [То, чего мне так нехватало: подробный гайд по запуску эмулятора андроида](http://codebutler.com/2012/10/10/configuring-a-usable-android-emualtor/). C оптимизацией по скорости и вообще, так чтобы можно было почти работать. Жаль, для iOS так не получится - многие игры было бы удобнее играть на ноуте.
 * [Хороший документ про некоторые подробности настройки линуксового TCP стека](http://www.lognormal.com/blog/2012/09/27/linux-tcpip-tuning/). Не глубокий, но в качестве отправной точки для исследований очень подойдет.
 * [Уже рассказывал, но теперь релиз: browserver](http://browserver.org). Отличная технология, позволяющая поднимать http сервер прямо в браузере. Фанатеем!
 * [На SO отличный тред «почему обработка сортированного массива быстрее, чем несортированного»](http://stackoverflow.com/questions/11227809/why-is-processing-a-sorted-array-faster-than-an-unsorted-array). Показывать «молодежи», как образец.
-* [Красивое техническое решение: управление наклоном](http://lenticular.attasi.com/), подходит для рассматривания объектов с разных сторон на айпадах-айфонах и тп. Посмотрите демки, я скомкано рассказал.
+* [Красивое техническое решение: управление наклоном](http://lenticular.attasi.com/), подходит для рассматривания объектов с разных сторон на айпадах-айфонах и т.п. Посмотрите демки, я скомкано рассказал.
 * [Граждане добрые, кто-то портирует mod_pagespeed для Nginx](https://github.com/pagespeed/ngx_pagespeed). Статус правда такой, что пользоваться пока нельзя. Но сама идея хороша!
