--- a/source/posts/2012-10-12.md
+++ b/source/posts/2012-10-12.md
@@ -27,6 +27,10 @@
 * [Парольный менеджер, но без хранения паролей](https://gist.github.com/3334991). А, между тем, идея неплохая. Хотя безопасность, конечно, на нуле. Я еще подумаю, как сделать так, чтобы эта штука красиво работала...
 
 ## Немного видео
-Сегодня тут только музыка: первый ролик, как пять отвязных музыкантов играют What Makes You Beautiful в 10 рук на одном рояле. А вот второе - сингл песни Doom and Gloom. Дада, The Rolling Stones записали новую песню, первую за 7 лет.
+Сегодня тут только музыка: первый ролик, как пять отвязных музыкантов играют What Makes You Beautiful в 10 рук на одном рояле.
 
-<iframe width=224 height=126 src="http://www.youtube.com/embed/0VqTwnAuHws" frameborder="0" allowfullscreen></iframe>&nbsp;<iframe width=224 height=126 src="http://www.youtube.com/embed/rPFGWVKXxm0" frameborder="0" allowfullscreen></iframe>
+<iframe width=224 height=126 src="http://www.youtube.com/embed/0VqTwnAuHws" frameborder="0" allowfullscreen></iframe>
+
+ А вот второе - сингл песни Doom and Gloom. Дада, The Rolling Stones записали новую песню, первую за 7 лет.
+
+<iframe width=224 height=126 src="http://www.youtube.com/embed/rPFGWVKXxm0" frameborder="0" allowfullscreen></iframe>
