--- a/source/posts/2012-10-12.md
+++ b/source/posts/2012-10-12.md
@@ -30,3 +30,5 @@
 Сегодня тут только музыка: первый ролик, как пять отвязных музыкантов играют What Makes You Beautiful в 10 рук на одном рояле. А вот второе - сингл песни Doom and Gloom. Дада, The Rolling Stones записали новую песню, первую за 7 лет.
 
 <iframe width=224 height=126 src="http://www.youtube.com/embed/0VqTwnAuHws" frameborder="0" allowfullscreen></iframe>&nbsp;<iframe width=224 height=126 src="http://www.youtube.com/embed/rPFGWVKXxm0" frameborder="0" allowfullscreen></iframe>
+
+*До встречи после выходных*
