--- a/source/posts/2012-10-12.md
+++ b/source/posts/2012-10-12.md
@@ -31,4 +31,4 @@
 
 <iframe width=224 height=126 src="http://www.youtube.com/embed/0VqTwnAuHws" frameborder="0" allowfullscreen></iframe>&nbsp;<iframe width=224 height=126 src="http://www.youtube.com/embed/rPFGWVKXxm0" frameborder="0" allowfullscreen></iframe>
 
-*До встречи после выходных*
+*До встречи после выходных!*
