--- a/source/posts/2012-10-12.md
+++ b/source/posts/2012-10-12.md
@@ -17,7 +17,7 @@
 * [Обсуждение на serverfault, почему Linux популярнее других Unix’ов](http://serverfault.com/questions/36359/why-is-linux-more-popular-than-bsd). Дак ить ясно почему, потому что работает и развивается, а не пытается прикрыться админским «работает - не трожь».
 * [Энди Кролл анализирует свежевышедший журнал Марко Армента](http://andycroll.com/2012/10/12/on-the-magazine/). Я очень хочу, чтобы кто-то взялся выпускать этот же контент на русском. Статьи хорошие, очень. И действительно журнальные.
 * [Демистифицируем гарбеджколлектор](http://xtzgzorex.wordpress.com/2012/10/11/demystifying-garbage-collectors/). Лежит в закладках, если честно - пока только пробежался, отложил почитать, чего и вам советую. Большая и подробная статья.
-* [Готовый сервис для распознования лиц и прочего. Опенсорс, бери-нехочу](https://github.com/globocom/remotecv/wiki). Причем внутри он тоже неплохо написан и почти не падает.
+* [Готовый сервис для распознавания лиц и прочего. Опенсорс, бери-нехочу](https://github.com/globocom/remotecv/wiki). Причем внутри он тоже неплохо написан и почти не падает.
 * [Интересный инструмент Dex](http://architects.dzone.com/articles/mongodb-performance-tuning-dex), в данном случае, используется для оптимизации и тюнинга Mongo. Как же я без него раньше-то жил?
 * [Замер производительности и вообще оптимизация питонового кода](http://jiaaro.com/python-performance-the-easyish-way). Действительно простой пост, но я и без него всё это прочитал в документации. Впрочем, это я молодец, а вам может и пригодится же?
 * [Лист рассылки, позволяющий получить в почту интересное с гитхаба](http://us5.campaign-archive2.com/home/?u=439aa16a39e4b10e0b65ff2ef&id=0b82fec5c2). В основном там интересны, конечно, трендовые репозитории и тп.
