--- a/source/posts/2012-10-15.md
+++ b/source/posts/2012-10-15.md
@@ -15,7 +15,7 @@
 2. Не пользоваться такими сложными форматами, как XML. Собственно, я так и сделал.
 3. Не верить дефолтным состояниям чужих парсеров. А если вы используете xerces - подключать security-модули.
 
-Но глобально, см. пункта 2 - я начал везде где можно отказываться от XML. Кажется мы пережили те времена, когда нужно было использовать удобный для компьютеров формат данных, теперь мы живем в эру, когда безопасность и люди - важнее.
+Но глобально, см. пункт 2 - я начал везде где можно отказываться от XML. Кажется мы пережили те времена, когда нужно было использовать удобный для компьютеров формат данных, теперь мы живем в эру, когда безопасность и люди - важнее.
 
 -----
 ## Видео
@@ -36,5 +36,5 @@
 * [Реализация прилипающих к верхней части блоков, но без jQuery](https://github.com/vhiremath4/Balloon). Пока не понимаю зачем, у меня везде jq, но на всякий случай положил в закладочки.
 * [Забыл, было или нет: экзотические структуры данных](http://concatenative.org/wiki/view/Exotic%20Data%20Structures). Лежит у меня в закладках давно. Есть и полезные, да.
 * [Модуль для питона Pattern](https://github.com/clips/pattern). Как-то я на него раньше внимания не обращал, а там ведь всё. И n-граммы, и веб-майнинг и куча других заготовок для написания почти поисковых машин с нуля :)
-* [Raspberry Pi Model B теперь с 512 мегами памяти](http://www.raspberrypi.org/archives/2180). А цена та же самая. Блин, я хочу штук пять купить уже. Предыдущую посылку потеряли, как не странно не на Почте России, а еще до нашей таможни :(
+* [Raspberry Pi Model B теперь с 512 мегами памяти](http://www.raspberrypi.org/archives/2180). А цена та же самая. Блин, я хочу штук пять купить уже. Предыдущую посылку потеряли, как ни странно не на Почте России, а еще до нашей таможни :(
 
