и все равно запятые.

--- a/source/posts/2012-10-15.md
+++ b/source/posts/2012-10-15.md
@@ -15,7 +15,7 @@
 2. Не пользоваться такими сложными форматами, как XML. Собственно, я так и сделал.
 3. Не верить дефолтным состояниям чужих парсеров. А если вы используете xerces - подключать security-модули.
 
-Но глобально, см. пункта 2 - я начал везде где можно отказываться от XML. Кажется мы пережили те времена, когда нужно было использовать удобный для компьютеров формат данных, теперь мы живем в эру, когда безопасность и люди - важнее.
+Но глобально, см. пункта 2 - я начал везде, где можно, отказываться от XML. Кажется, мы пережили те времена, когда нужно было использовать удобный для компьютеров формат данных, теперь мы живем в эру, когда безопасность и люди - важнее.
 
 -----
 ## Видео
@@ -25,16 +25,16 @@
 Ролик для всех! Для фанатов Apple и для ненавистников Apple. И особенно, для фанатов Бэтмена!
 
 ## Для гиков
-* [Операционная система SymbOS для процессоров Z80](http://www.symbos.de). Вытесняющая многозадачность, доступ ко всем страницам памяти, работа с диском. Умеет играть .mp3 и видео. В общем z80 и сейчас живее всех живых. Купить чтоли MSX2+, для души?
+* [Операционная система SymbOS для процессоров Z80](http://www.symbos.de). Вытесняющая многозадачность, доступ ко всем страницам памяти, работа с диском. Умеет играть .mp3 и видео. В общем, z80 и сейчас живее всех живых. Купить чтоли MSX2+, для души?
 * [Syte обновился и теперь его можно юзать!](https://github.com/rigoneri/syte). Это такое средство для создания приятной персональной страницы, я про него уже писал. Думаю, не сделать ли такое же, наконец-то сделаю себе какой-нибудь сайт-визитку.
 * [А вот скрипт на питоне, который делает красивое резюме из .md файла](https://github.com/mwhite/resume). Ново, да?
 * [Кстати, годный bash скрипт, который делает .pdf с твоим резюме](https://github.com/buu700/html-resume). Хотя при наличии такого функционала в линкдине - какой смысл?
 * [Может ли код на C и C++ выглядеть одинаково, но работать по разному?](http://stackoverflow.com/questions/12887700/can-code-that-is-valid-in-both-c-and-c-produce-different-behavior-when-compile). На стековерфлоу всерьез отвечают даже на такие вопросы!
 * [Годный туториал «как построить свою тему для Wordpress»](http://blog.teamtreehouse.com/responsive-wordpress-bootstrap-theme-tutorial) с использованием Бутстрапа. Чем дальше, тем больше бутстрап зохавывает мозг разработчиков. Я вот уже ищу что-нибудь вроде мета-мета-бутстрап.
 * [Посгри идет правильной дорогой: Postgres 9.2 имеет встроенную поддержку JSON](http://michael.otacoo.com/postgresql-2/postgres-9-2-highlight-json-data-type/). Дада, прямо тип данных такой, JSON. Красивое решение, кстати.
-* [Еще проще всё - давайте деплоить одной кнопкой: DeployButton](http://deploybutton.com). Берет код из гитхаба или дропбокса, и выкладывает куда захочешь, например на хероку. Приятно, но при наличии Fabric уже не понятно зачем.
+* [Еще проще всё - давайте деплоить одной кнопкой: DeployButton](http://deploybutton.com). Берет код из гитхаба или дропбокса, и выкладывает куда захочешь, например, на хероку. Приятно, но при наличии Fabric уже непонятно зачем.
 * [Реализация прилипающих к верхней части блоков, но без jQuery](https://github.com/vhiremath4/Balloon). Пока не понимаю зачем, у меня везде jq, но на всякий случай положил в закладочки.
 * [Забыл, было или нет: экзотические структуры данных](http://concatenative.org/wiki/view/Exotic%20Data%20Structures). Лежит у меня в закладках давно. Есть и полезные, да.
-* [Модуль для питона Pattern](https://github.com/clips/pattern). Как-то я на него раньше внимания не обращал, а там ведь всё. И n-граммы, и веб-майнинг и куча других заготовок для написания почти поисковых машин с нуля :)
-* [Raspberry Pi Model B теперь с 512 мегами памяти](http://www.raspberrypi.org/archives/2180). А цена та же самая. Блин, я хочу штук пять купить уже. Предыдущую посылку потеряли, как не странно не на Почте России, а еще до нашей таможни :(
+* [Модуль для питона Pattern](https://github.com/clips/pattern). Как-то я на него раньше внимания не обращал, а там ведь всё. И n-граммы, и веб-майнинг и куча других заготовок для написания почти поисковых машин с нуля :).
+* [Raspberry Pi Model B теперь с 512 мегами памяти](http://www.raspberrypi.org/archives/2180). А цена та же самая. Блин, я хочу штук пять купить уже. Предыдущую посылку потеряли, как ни странно, не на Почте России, а еще до нашей таможни :(.
 
