--- a/source/posts/2012-10-29.md
+++ b/source/posts/2012-10-29.md
@@ -19,9 +19,13 @@
 * [Майкрософт действительно давала купон на $100](http://seattletimes.com/html/technologybrierdudleysblog/2019521205_microsoft_offers_100_giveaway.html) первым 100 чувакам, которые прорвутся в их Microsoft Store в день продаж Surface. Впрочем, так действительно делают "все кроме эппл".
 
 ## Видео
-Настоящая реклама IE9. Толстый юмор. Внимание, содержит элемент стебалова! А второй ролик - это Gangnam Style, в стиле MIT. Внимание, содержит элемент стебалова тоже!
+Настоящая реклама IE9. Толстый юмор. Внимание, содержит элемент стебалова!
 
-<iframe width="560" height="315" src="http://www.youtube.com/embed/JyGP0ZyxF5E" frameborder="0" allowfullscreen></iframe><iframe width="560" height="315" src="http://www.youtube.com/embed/7NAtQRAcl0U" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="http://www.youtube.com/embed/JyGP0ZyxF5E" frameborder="0" allowfullscreen></iframe>
+
+А второй ролик - это Gangnam Style, в стиле MIT. Внимание, содержит элемент стебалова тоже!
+
+<iframe width="560" height="315" src="http://www.youtube.com/embed/7NAtQRAcl0U" frameborder="0" allowfullscreen></iframe>
 
 
 ## Для гиков
