--- a/source/posts/2012-10-29.md
+++ b/source/posts/2012-10-29.md
@@ -9,7 +9,7 @@
 
 ## Для всех
 * Внезапно [оказалось, что джейлбрейкать iPhone легально, а iPad - нет](http://www.businessinsider.com/jailbreak-the-iphone-but-not-the-ipad-2012-10). Очень смешно, конечно. Человеческие законы пишут специальные юмористы. Если бы программисты так программы писали... хотя, в общем так и пишут, да.
-* [Новый LightScribe передает то, что ты пишешь, по wifi](http://mashable.com/2012/10/29/livescribe-sky-wi-fi-smartpen/). Интересно, но я всегда ценил lightscribe за автономность, а не за возможность всё это перенести на компьютер. Ну, впрочем, и у новой модели, я уверен, найдется масса поклонников.
+* [Новый LiveScribe передает то, что ты пишешь, по wifi](http://mashable.com/2012/10/29/livescribe-sky-wi-fi-smartpen/). Интересно, но я всегда ценил livescribe за автономность, а не за возможность всё это перенести на компьютер. Ну, впрочем, и у новой модели, я уверен, найдется масса поклонников.
 * [GoogCMS](https://github.com/benhartley/googcms) - минималистичная cms, управляющаяся через таблицу в Google Docs. Очень смешная идея, честное слово.
 * Как-то я раньше этого не замечал, но [Sigil](http://code.google.com/p/sigil/) стал вполне приличным. Это кроссплатформенный редактор, для создания книжек в формате *.epub*. Захочу делать книжки - воспользуюсь им, а не этим страшным полуавтоматом от Эппл.
 * [Ваш сотрудник популярнен в соц-сеточках - что делать?](http://online.wsj.com/article/SB10000872396390443995604578003082273743230.html) - задается вопросом автор статьи. Ну, что делать, радоваться. Если человек лоялен компании - будет польза. Если не лоялен - с ним легко расстаться. Самое сложное с типами вроде меня: у меня вечно есть "своё мнение" и фиг я напишу в твиттер что-то, что сам не считаю правдой.
