--- a/source/posts/2012-10-30.md
+++ b/source/posts/2012-10-30.md
@@ -26,7 +26,7 @@
 ## Для гиков
 * [Эван Миллер: почему я выбрал Эрланг](http://www.evanmiller.org/why-i-program-in-erlang.html). Действительно, выбор не очевиден. Мне эрланг нравится. Но шансы на его использование мной, ну, скажем так, не велики.
 * [Ух, американцы эвакуируют датацентры, чтобы не убиться во время урагана](http://pastebin.com/9Fr2eW6U). Хорошо, что Москва так далеко от всех морей - ураганов такой мощности у нас не бывает, землетрясений тоже.
-* [А Хероку всех заранее предупреждает, может быть всякое](https://status.heroku.com/incidents/460). Это, конечно, красиво. Но т.к. хероку лежит и иногда подолгу - это предпреждение нам, как мертвому припарки.
+* [А Хероку всех заранее предупреждает, может быть всякое](https://status.heroku.com/incidents/460). Это, конечно, красиво. Но т.к. хероку лежит и иногда подолгу - это предупреждение нам, как мертвому припарки.
 * [Как гики учат языки](http://blog.rinik.net/hacking-language) - реализация системы запоминания новых слов, которые берутся прямо из книжек. Графики и вообще красота. И картинки из поиска по картинкам.
 * [В Г+ у Гвидо отличный тред про паттерны для быстрого питона](https://plus.google.com/115212051037621986145/posts/HajXHPGN752). Читайте каменты, местами подсказывают не очевидные вещи.
 * Из каментов к предыдущей ссылке - [numba против cython против cpython](http://jakevdp.github.com/blog/2012/08/24/numba-vs-cython/), хороший тест производительности. Понятно что Cython рвет всех, но там и код ощутимо переписывать. А вот numba удивила, интересно.
