--- a/source/posts/2012-10-31.md
+++ b/source/posts/2012-10-31.md
@@ -27,7 +27,7 @@
 <table><tr><td><iframe width="275" height="155" src="http://www.youtube.com/embed/OHWA_d-wobw" frameborder="0" allowfullscreen></iframe></td><td><iframe width="275" height="155" src="http://www.youtube.com/embed/3P_jklZlm2Y" frameborder="0" allowfullscreen></iframe></td></tr></table>
 
 ## Для гиков
-* [Куча готовых темплейтов для создания Windows-like интерфейсом](http://www.webresourcesdepot.com/everything-you-need-to-create-windows-8-metro-ui-styled-websites/). Нет, хоть бейте меня, но всё же это метро-интерфейс. Мне в нем тесно, шумно, неудобно и вообще. Я знаю что это моя проблема и большинство ездит на метро - не могу, хоть убейте.
+* [Куча готовых темплейтов для создания Windows-like интерфейсов](http://www.webresourcesdepot.com/everything-you-need-to-create-windows-8-metro-ui-styled-websites/). Нет, хоть бейте меня, но всё же это метро-интерфейс. Мне в нем тесно, шумно, неудобно и вообще. Я знаю что это моя проблема и большинство ездит на метро - не могу, хоть убейте.
 * [Инструкция по установке Ubuntu на Nexus7](http://wiki.ubuntu.com/Nexus7/Installation). А можно на nexus7 поставить windows 8? Вообще я хочу другого: поставить на Nexus7 скажем Plan9. Но идея с Ubuntu тоже хорошая.
 * [Сравнение внутренностей байткода Dalvik и JRE](http://forensics.spreitzenbarth.de/2012/08/27/comparison-of-dalvik-and-java-bytecode/)
 * [Извлечение основного цвета изображения](http://charlesleifer.com/blog/using-python-and-k-means-to-find-the-dominant-colors-in-images/) - всегда интересная задача. А тут еще и красивое решение на любимом и понятном питоне.
