--- a/source/posts/2012-11-06.md
+++ b/source/posts/2012-11-06.md
@@ -8,6 +8,8 @@
 
 Конечно веб-версия больше всего интересна бизнесам, маленьким и большим. Собственно, даже по виду страниц видно, что инстаграм метит на нишу pinterest и facebook pages.
 
+А вторая *большая* новость этой недели: [Форсквер начал рейтинговать заведения](http://thenextweb.com/apps/2012/11/05/foursquare-now-gives-1-10-ratings-for-locations-in-its-ios-app-becomes-yelp-competitor-overnight/), т.е. давать им оценку по десятибальной шкале. Это действительно попытка конкурировать с Yelp. Это же - новая бизнес модель. И это же - прекрасный источник новых для меня данных, надо подумать, что я с ними буду делать. Приятно также, что вряд ли Yelp сможет купить Foursquare, а значит у людей будет **выбор**. А выбор это то, что я больше всего люблю :)
+
 -----
 
 ## Для всех
@@ -23,7 +25,7 @@
 ## Видео
 
 <table><tr>
-<td><iframe width="420" height="315" src="http://www.youtube.com/embed/U0x9HtYgVqA" frameborder="0" allowfullscreen></iframe></td><td><iframe width="560" height="315" src="http://www.youtube.com/embed/1oHWvFrpocY" frameborder="0" allowfullscreen></iframe></td>
+<td><iframe width=252 height=189 src="http://www.youtube.com/embed/U0x9HtYgVqA" frameborder="0" allowfullscreen></iframe></td><td><iframe width=336 height=189 src="http://www.youtube.com/embed/1oHWvFrpocY" frameborder="0" allowfullscreen></iframe></td>
 </tr></table>
 
 ## Для гиков
