--- a/source/posts/2012-12-11.md
+++ b/source/posts/2012-12-11.md
@@ -17,7 +17,7 @@
 ## Видео
 Полная история формата .gif. Ну, признавайтесь, кто качал гифы с bbs’ок?
 
-<iframe src="http://player.vimeo.com/video/54791694?badge=0" width=«300» height=«167» frameborder="0"></iframe>
+<iframe src="http://player.vimeo.com/video/54791694?badge=0" width=300 height=167 frameborder="0"></iframe>
 
 -----
 
