--- a/source/posts/2012-12-11.md
+++ b/source/posts/2012-12-11.md
@@ -8,9 +8,9 @@
 
 Апдейт SkyDrive не выпускают с августа. Так же блокируют апдейты и выкидывают из AppStore некоторые приложения, использующие SkyDrive через Live SDK. И тоже, причины - несоблюдение правил аппстора: форма логина Live SDK содержит кнопку «Регистрация», которая ведет на веб. Где, разумеется, можно сразу докупить и место на диске. Как следствие - блокировка приложений, логинящихся через Live. Атака широким фронтом, да.
 
-Самые стойкие из вас наверняка помнят, что такая же история была с дропбоксом. Говоря еще точнее, претензия была к приложениям, использующим Dropbox SDK. Форма логина в DropBox содержала ссылку на «десктопную» (т.е. веб) версию сайта, где можно было докупить еще места. А поддержки «купить еще место через AppStore» небыло.
+Самые стойкие из вас наверняка помнят, что такая же история была с дропбоксом. Говоря еще точнее, претензия была к приложениям, использующим Dropbox SDK. Форма логина в DropBox содержала ссылку на «десктопную» (т.е. веб) версию сайта, где можно было докупить еще места. А поддержки «купить еще место через AppStore» не было.
 
-Когда эта история закончится никто не знает. И самое интересное, ведь Эппл в своем праве, делает всё в рамках своих правил. Никто еще настолько четко не ставил Microsoft на место. Кажется, единственное что сейчас стоит сделать Балмеру - торжественно объявить «у нас есть своя платформа, мы больше не поддерживаем iPhone». Это был бы поступок, вызывающий уважение. Но вряд ли это произойдет скоро, поэтому давайте просто понаблюдаем за этим актом принудительного соития.
+Когда эта история закончится, никто не знает. И самое интересное, ведь Эппл в своем праве, делает всё в рамках своих правил. Никто еще настолько чётко не ставил Microsoft на место. Кажется, единственное, что сейчас стоит сделать Балмеру - торжественно объявить «у нас есть своя платформа, мы больше не поддерживаем iPhone». Это был бы поступок, вызывающий уважение. Но вряд ли это произойдёт скоро, поэтому давайте просто понаблюдаем за этим актом принудительного соития.
 
 -----
 
@@ -24,12 +24,12 @@
 ## Ссылки
 
 * Продолжение [вчерашней драмы](/post/2012-12-10/) - Твиттер сегодня [объявил, что в их обновленном клиенте есть фотофильтры](http://blog.twitter.com/2012/12/twitter-photos-put-filter-on-it.html). Понятно, что это ответ на действия Instagram. Самое важное в заметке - фильтры, автоулучшение фото, обрезание и тп - всё это технологии давно известной нам компании [Aviary](http://aviary.com/), т.е. прямое использование их SDK. Очень интересно смотреть, насколько ребята из Твиттера сосредоточены на своем продукте, и насколько легко всё побочное (в т.ч. все фоточки) отдают другим игрокам.
-* Вчера случилось сразу два отключения. Сначала, не очень сильно, мир страдал от падения Facebook. [Говорят](http://thenextweb.com/facebook/2012/12/11/facebook-encountering-dns-issues-making-it-unavailable-for-some-users/?fromcat=all) это было связано с очередной ошибкой обновления DNS. Мы верим, конечно.
+* Вчера случилось сразу два отключения. Сначала, не очень сильно, мир страдал от падения Facebook. [Говорят](http://thenextweb.com/facebook/2012/12/11/facebook-encountering-dns-issues-making-it-unavailable-for-some-users/?fromcat=all), это было связано с очередной ошибкой обновления DNS. Мы верим, конечно.
 * Второе отключение было куда серьезнее. [Ложилась часть инфраструктуры Google, ответственная за gmail](http://venturebeat.com/2012/12/10/google-confirms-gmail-service-disruptions/) и авторизацию пользователей. К лежащему gmail, я надеюсь, все уже привыкли. Страшнее было другое: падал Chrome и все его производные, привязанные к гуглу - в том числе собранный из сорсов ванильный Chromium. [Пострадало очень много людей](http://thenextweb.com/google/2012/12/10/gmail-goes-down-for-many/), практически все, кто включил синхронизацию Chrome/Chromium к гуглу. Интересно, что пользователи Chromebook не пострадали - там авторизация иначе устроена.
-* У Яндекса вчера обновилось приложение Я.Диск для iOS - теперь поддерживает iPad. Но я о другом: [зарелизился SparkleShare](http://sparkleshare.org). Это такой клон дропбокса, только в качестве хранилища выступает любой git-репозиторий. Я поигрался - работает пока не стабильно (на OS X), но идея неплохая, некоторым гикам должно понравиться. Главное не ожидать от этого решения хорошей скорости - оно для другого совсем.
+* У Яндекса вчера обновилось приложение Я.Диск для iOS - теперь поддерживает iPad. Но я о другом: [зарелизился SparkleShare](http://sparkleshare.org). Это такой клон дропбокса, только в качестве хранилища выступает любой git-репозиторий. Я поигрался - работает пока нестабильно (на OS X), но идея неплохая, некоторым гикам должно понравиться. Главное, не ожидать от этого решения хорошей скорости - оно для другого совсем.
 * Только по приблизительным оценкам [PSY заработал на своем Gangnam Style около $5.000.000](http://www.techdirt.com/blog/casestudies/articles/20121209/07431921317/psy-makes-81-million-ignoring-copyright-infringements-gangnam-style.shtml). Зная заработки других k-pop коллективов - это не очень много. С другой стороны, никогда у PSY не было такой популярности, он не милашка и его в группе не 15 человек :)
 * [Владельца сети сайтов YouPorn арестовали](http://www.sueddeutsche.de/wirtschaft/verdacht-auf-steuerhinterziehung-youporn-chef-ist-festgenommen-worden-1.1546865) (внимание, немецкий!). Официальное обвинение - неуплата налогов. Я как-то общался с этим человеком, вы не представляете масштабы его амбиций. Если он действительно спалился на налогах - ну, это будет ОЧЕНЬ глупо.
-* Оказывается издательство o’Reilly давно [выложило книгу-легенду «Unix Text Processing»](http://oreilly.com/openbook/utp/) в свободный доступ. Книга 1987 года не потеряла своей актуальности и поныне. Скайчате PDF, полистайте, это правда очень круто было. Обратите внимание, эта же книга есть там в формате groff.
+* Оказывается, издательство o’Reilly давно [выложило книгу-легенду «Unix Text Processing»](http://oreilly.com/openbook/utp/) в свободный доступ. Книга 1987 года не потеряла своей актуальности и поныне. Скачайте PDF, полистайте, это правда очень круто было. Обратите внимание, эта же книга есть там в формате groff.
 * У Ардуино вышла [новая железка, в формфакторе геймпада](http://arduino.cc/en/Main/ArduinoBoardEsplora). Хочу. Или не хочу. Нет, кажется, пока не понял :)
 * Мета-статья [7 статей, которые помогут вам понять адаптивную типографику](http://webexpedition18.com/articles/responsive-typography/). Прочитал 4 из 7 - все понравились, остальное дочитаю позднее.
 
