--- a/source/posts/2012-12-13.md
+++ b/source/posts/2012-12-13.md
@@ -4,6 +4,8 @@
 
 Я уже не раз писал, что очень не люблю [adblock][]. Пришло время рассказать почему.
 
+![center](http://www.horniman.ac.uk/static/img/placeholder/placeholder-w523h378.png)
+
 Извините за прописные истины, но лучше обо все договориться на берегу. В моей голове мир устроен так: одни люди (назовем их Творцы) делают что-то, а вторые (пусть они будут Потребители) этот продукт потребляют разными образами. За счастье обладать и потреблять продукт, Потребители что-то дают Творцам в ответ. В простейшем случае - деньги, в более сложном - внимание, рекламу, славу. Но факт остается фактом, между Творцом и Потребителем устанавливается то, что я называю «социальным контрактом». Творец обязуется предоставить потребителю продукт, Потребитель в ответ обязуется расплатиться в той форме, которая удобна Творцу. Если одна из сторон не выполняет свою сторону контракта - вторая вольна разорвать его в любой момент. Например, если Творец стал выпускать продукт ненадлежащего качества, или вообще не перестал что-то производить - Потребитель имеет полное право не употреблять этот продукт и не расплачиваться. И наоборот, если Потребитель отказывается платить - Творец имеет полное право больше ему ничего не продавать. Но это в моей голове. Как же всё это применяется в реальности?
 
 В реальности владелец сайта (Творец) создает контент, подбирает картинки, старается сделать всё так, чтобы предложить пользователю что-то нужное. А в обмен он в общем-то требует малую толику внимания пользователя (Потребителя). Сайт показывает пользователю рекламу, пользователь тратит на нее немножко внимания и времени, это внимание конвертируется рекламодателем в деньги, которые кормят и поят создателя сайта. Всё просто и логично. Никто не призывает тебя что-то покупать, куда-то кликать, от тебя просят всего лишь внимания.
