--- a/source/posts/2012-12-13.md
+++ b/source/posts/2012-12-13.md
@@ -20,7 +20,7 @@
 
 И напоследок - конкурс для пользователей адблока. Как вы думаете, какая бизнес-модель у АдБлока? Ведь на поддержание всего этого хозяйства нужны финансы. Уверен, если вы не знаете, то ни за что не догадаетесь.
 
-[adblock]: http://adblockplus.org/ru/ AdBlock Plus
+[adblock]: http://adblockplus.org/ru/
 
 
 -----
