--- a/source/posts/2012-12-13.md
+++ b/source/posts/2012-12-13.md
@@ -6,7 +6,7 @@
 
 ![center](http://www.horniman.ac.uk/static/img/placeholder/placeholder-w523h378.png)
 
-Извините за прописные истины, но лучше обо все договориться на берегу. В моей голове мир устроен так: одни люди (назовем их Творцы) делают что-то, а вторые (пусть они будут Потребители) этот продукт потребляют разными образами. За счастье обладать и потреблять продукт, Потребители что-то дают Творцам в ответ. В простейшем случае - деньги, в более сложном - внимание, рекламу, славу. Но факт остается фактом, между Творцом и Потребителем устанавливается то, что я называю «социальным контрактом». Творец обязуется предоставить потребителю продукт, Потребитель в ответ обязуется расплатиться в той форме, которая удобна Творцу. Если одна из сторон не выполняет свою сторону контракта - вторая вольна разорвать его в любой момент. Например, если Творец стал выпускать продукт ненадлежащего качества, или вообще не перестал что-то производить - Потребитель имеет полное право не употреблять этот продукт и не расплачиваться. И наоборот, если Потребитель отказывается платить - Творец имеет полное право больше ему ничего не продавать. Но это в моей голове. Как же всё это применяется в реальности?
+Извините за прописные истины, но лучше обо все договориться на берегу. В моей голове мир устроен так: одни люди (назовем их Творцы) делают что-то, а вторые (пусть они будут Потребители) этот продукт потребляют разными образами. За счастье обладать и потреблять продукт, Потребители что-то дают Творцам в ответ. В простейшем случае - деньги, в более сложном - внимание, рекламу, славу. Но факт остается фактом, между Творцом и Потребителем устанавливается то, что я называю «социальным контрактом». Творец обязуется предоставить потребителю продукт, Потребитель в ответ обязуется расплатиться в той форме, которая удобна Творцу. Если одна из сторон не выполняет свою сторону контракта - вторая вольна разорвать его в любой момент. Например, если Творец стал выпускать продукт ненадлежащего качества, или вообще перестал что-то производить - Потребитель имеет полное право не употреблять этот продукт и не расплачиваться. И наоборот, если Потребитель отказывается платить - Творец имеет полное право больше ему ничего не продавать. Но это в моей голове. Как же всё это применяется в реальности?
 
 В реальности владелец сайта (Творец) создает контент, подбирает картинки, старается сделать всё так, чтобы предложить пользователю что-то нужное. А в обмен он в общем-то требует малую толику внимания пользователя (Потребителя). Сайт показывает пользователю рекламу, пользователь тратит на нее немножко внимания и времени, это внимание конвертируется рекламодателем в деньги, которые кормят и поят создателя сайта. Всё просто и логично. Никто не призывает тебя что-то покупать, куда-то кликать, от тебя просят всего лишь внимания.
 
@@ -14,7 +14,7 @@
 
 Как он работает? Элементарно, это банальная резалка «ненужных» блоков на сайтах, которые посещает пользователь. Список правил, что вырезать на страницах, скачивается с серверов компании-разработчика адблока, регулярно обновляется, чтобы Фанатичные Халявщики имели возможность не напрягаясь нарушать тот самый «социальный контракт» и радоваться от своей крутости. Для установившего плагин схема выглядит так: Творец создает продукт, Потребитель его потребляет, Адблок делает вид, что Потребитель расплатился, на деле же никакой «оплаты» не произошло. Как это называется в обычной жизни? Правильно, именно так. Именно за такую модель я и считаю АдБлок очень и очень плохой штукой.
 
-Вот вам еще одна аналгия. Едет электричка. В ней едут разные люди. По поезду идет продавец-контроллер, задача которого - продать безбилетным деньги или высадить их с поезда. Часть Потребителей купила билеты заранее и наслаждается поездкой, другая часть Потребителей купит билеты у продавца прямо в поезде. Он неприятный тип, но им же ехать, а не с продавцом общаться. А некоторые пассажиры платить не будут. Они будут бегать от продавца-контроллера, перепрыгивать из вагона в вагон, показывать фальшивые билетики, напечатанные на домашнем принтере. Словом, будут делать всё, чтобы не платить. И они совершенно уверены, что никому не делают хуже. Видимо у Халявщиков плохо с логикой, они не понимают, что за них платят другие. Владелец железной дороги повышает цены на проезд, чтобы компенсировать свои расходы на Халявщиков за счет тех, кто платит. Владелец сайта вывешивает на страницах еще больше рекламы, чтобы компенсировать заложить в «цену билета» тех, кто потребляет контент, но не платит за него.
+Вот вам еще одна аналогия. Едет электричка. В ней едут разные люди. По поезду идет продавец-контроллер, задача которого - продать безбилетным билеты или высадить их с поезда. Часть Потребителей купила билеты заранее и наслаждается поездкой, другая часть Потребителей купит билеты у продавца прямо в поезде. Он неприятный тип, но им же ехать, а не с продавцом общаться. А некоторые пассажиры платить не будут. Они будут бегать от продавца-контроллера, перепрыгивать из вагона в вагон, показывать фальшивые билетики, напечатанные на домашнем принтере. Словом, будут делать всё, чтобы не платить. И они совершенно уверены, что никому не делают хуже. Видимо у Халявщиков плохо с логикой, они не понимают, что за них платят другие. Владелец железной дороги повышает цены на проезд, чтобы компенсировать свои расходы на Халявщиков за счет тех, кто платит. Владелец сайта вывешивает на страницах еще больше рекламы, чтобы компенсировать, заложить в «цену билета» тех, кто потребляет контент, но не платит за него.
 
 Конечно же проблема не односторонняя. Большинство Творцов не позволяют пользователям расплатиться каким-то другим образом, кроме просмотра рекламы. Например, не вниманием, а реальными деньгами. Допустим, у Яндекса есть традиция - разрешать в настройках отключать рекламу. Но бОльшая часть сайтов не могут себе позволить такой роскоши. Как не быть Халявщиком? Очень просто. Даже слишком просто. Переставать потреблять продукты, в которых вас не устраивает оплата. Вы видите слишком загруженный рекламой сайт? Идите на другой. Я, например, перестал ходить в большинство роликов YouTube по этой причине. Просите владельцев сайтов сделать кнопку «отключить мне рекламу» за небольшую денежку. Наконец, просто, смиритесь и смотрите рекламу, ведь это часть вашего социального контракта.
 
