--- a/source/posts/2012-12-13.md
+++ b/source/posts/2012-12-13.md
@@ -14,7 +14,7 @@
 
 Как он работает? Элементарно, это банальная резалка «ненужных» блоков на сайтах, которые посещает пользователь. Список правил, что вырезать на страницах, скачивается с серверов компании-разработчика адблока, регулярно обновляется, чтобы Фанатичные Халявщики имели возможность не напрягаясь нарушать тот самый «социальный контракт» и радоваться от своей крутости. Для установившего плагин схема выглядит так: Творец создает продукт, Потребитель его потребляет, Адблок делает вид, что Потребитель расплатился, на деле же никакой «оплаты» не произошло. Как это называется в обычной жизни? Правильно, именно так. Именно за такую модель я и считаю АдБлок очень и очень плохой штукой.
 
-Вот вам еще одна аналгия. Едет электричка. В ней едут разные люди. По поезду идет продавец-контроллер, задача которого - продать безбилетным деньги или высадить их с поезда. Часть Потребителей купила билеты заранее и наслаждается поездкой, другая часть Потребителей купит билеты у продавца прямо в поезде. Он неприятный тип, но им же ехать, а не с продавцом общаться. А некоторые пассажиры платить не будут. Они будут бегать от продавца-контроллера, перепрыгивать из вагона в вагон, показывать фальшивые билетики, напечатанные на домашнем принтере. Словом, будут делать всё, чтобы не платить. И они совершенно уверены, что никому не делают хуже. Видимо у Халявщиков плохо с логикой, они не понимают, что за них платят другие. Владелец железной дороги повышает цены на проезд, чтобы компенсировать свои расходы на Халявщиков за счет тех, кто платит. Владелец сайта вывешивает на страницах еще больше рекламы, чтобы компенсировать заложить в «цену билета» тех, кто потребляет контент, но не платит за него.
+Вот вам еще одна аналогия. Едет электричка. В ней едут разные люди. По поезду идет продавец-контроллер, задача которого - продать безбилетным билеты или высадить их с поезда. Часть Потребителей купила билеты заранее и наслаждается поездкой, другая часть Потребителей купит билеты у продавца прямо в поезде. Он неприятный тип, но им же ехать, а не с продавцом общаться. А некоторые пассажиры платить не будут. Они будут бегать от продавца-контроллера, перепрыгивать из вагона в вагон, показывать фальшивые билетики, напечатанные на домашнем принтере. Словом, будут делать всё, чтобы не платить. И они совершенно уверены, что никому не делают хуже. Видимо у Халявщиков плохо с логикой, они не понимают, что за них платят другие. Владелец железной дороги повышает цены на проезд, чтобы компенсировать свои расходы на Халявщиков за счет тех, кто платит. Владелец сайта вывешивает на страницах еще больше рекламы, чтобы компенсировать заложить в «цену билета» тех, кто потребляет контент, но не платит за него.
 
 Конечно же проблема не односторонняя. Большинство Творцов не позволяют пользователям расплатиться каким-то другим образом, кроме просмотра рекламы. Например, не вниманием, а реальными деньгами. Допустим, у Яндекса есть традиция - разрешать в настройках отключать рекламу. Но бОльшая часть сайтов не могут себе позволить такой роскоши. Как не быть Халявщиком? Очень просто. Даже слишком просто. Переставать потреблять продукты, в которых вас не устраивает оплата. Вы видите слишком загруженный рекламой сайт? Идите на другой. Я, например, перестал ходить в большинство роликов YouTube по этой причине. Просите владельцев сайтов сделать кнопку «отключить мне рекламу» за небольшую денежку. Наконец, просто, смиритесь и смотрите рекламу, ведь это часть вашего социального контракта.
 
