god damit fixes

--- a/source/posts/2012-12-20.md
+++ b/source/posts/2012-12-20.md
@@ -24,7 +24,7 @@
 
 Эксперименты c кипятком при −41 градусе цельсия!
 
-<iframe width=«300» height=«168» src="http://www.youtube.com/embed/HxnOmhDTSKw" frameborder="0" allowfullscreen></iframe>
+<iframe width=300 height=168 src="http://www.youtube.com/embed/HxnOmhDTSKw" frameborder="0" allowfullscreen></iframe>
 
 -----
 
