традиционно свежие запятые к выпуску :)

--- a/source/posts/2012-12-20.md
+++ b/source/posts/2012-12-20.md
@@ -5,8 +5,8 @@
 ![center](http://www.ictbusiness.it/files/2012/08/immagini/29482/apple-vs-sam_t.jpg)
 
 1. Действительно, была начата процедура по инвалидации патента, однако технически патент еще в силе и будет в силе до окончательного решения USPTO. Т.е. у Эппла еще тысячи способов опротестовать решение, до того как оно вступит в силу.
-2. Более того, USPTO очень часто меняет решения в процессе пересмотров патентов. Они так организационно устроены, цикл их работы выглядит так «исследование -> инвалидация -> протест -> доиследование -> вердикт». Так что, еще раз повторю, торопиться пока рано.
-3. Тем не менее, [процедурный документ подписан](http://ru.scribd.com/doc/117432798/Pinch-to-Zoom-Patent-Invalidated) не только «главным исследователем» но и «ответственным главным исследователем». Видимо в USPTO хорошо понимают уровень ответственности и приложили максимум усилий к изучения дела уже на этом, начальном этапе.
+2. Более того, USPTO очень часто меняет решения в процессе пересмотров патентов. Они так организационно устроены, цикл их работы выглядит так — «исследование -> инвалидация -> протест -> доиследование -> вердикт». Так что, еще раз повторю, торопиться пока рано.
+3. Тем не менее, [процедурный документ подписан](http://ru.scribd.com/doc/117432798/Pinch-to-Zoom-Patent-Invalidated) не только «главным исследователем», но и «ответственным главным исследователем». Видимо в USPTO хорошо понимают уровень ответственности и приложили максимум усилий к изучения дела уже на этом, начальном, этапе.
 4. Первичный патент на pitch-to-zoom, в пользу которого пытаются инвалидировать патент Эппла, выписан на Дэнни Хилла, заявка заполнена еще в ноябре 2005го года.
 5. Эппл может доказать, что их изобретение произошло раньше патента Хилла, однако это будет не просто. Насколько я понимаю, вы имеете приоритет на патент, если имели на руках прототип ранее оппонента. Дата регистрации патента Apple - начало 2007 года, так что вряд ли у них есть доказательства наличия более раннего публичного прототипа.
 6. Параграф номер 14 очень интересный. В нем написано примерно вот что: вы должны предоставить ваши **самые** убедительные доказательства, иначе патент будет инвалидирован и это будет окончательное решение.
@@ -14,7 +14,7 @@
 
 Вот такая история. Я в этой истории по прежнему болею за то, чтобы эппл дошла до Верховного Суда и там выиграла. Почему? Потому что это раскачивание лодки. Чем больше амплитуда раскачивания лодки патентного права, тем больше шансов, что она зачерпнет воду и пойдет уже ко дну.
 
-Простите, я как всякий гик, ненавижу патентное право в области софта. Ненавижу, поэтому плохо понимаю его кишочки. Кто-нибудь, понимающий это более глубоко - поправьте меня пожалуйста, расскажите, где в этом тексте фактические ошибки?
+Простите, я как всякий гик, ненавижу патентное право в области софта. Ненавижу, поэтому плохо понимаю его кишочки. Кто-нибудь, понимающий это более глубоко - поправьте меня, пожалуйста, расскажите, где в этом тексте фактические ошибки?
 
 
 
@@ -33,7 +33,7 @@
 * [Twitter Bootstrap - запланированно на версию 3](https://github.com/twitter/bootstrap/wiki/Upcoming-3.0-changes). Очередной полный рерайт бутстрапа. Ключевые, как мне кажется,  вещи: отказ от IE7 и FF3.6 (йай!), отказ от fluid сетки (в основной сетке теперь будет % от ширины), отказ от дурацких @blue, @pink и тп, в пользу семантических смыслов. В общем - молодцы, я так считаю.
 * [Гитхаб отчитался о результатах года](https://github.com/blog/1359-the-octoverse-in-2012). Промотайте верхнюю часть, изучите какие репозитории были самыми популярными. Это хорошо показывает тренд, что сейчас модно среди разработчиков. Ну и последняя часть исследования - про emoji тоже хороша.
 * [Digia выпустили первый релиз Qt5](http://digia.com/en/Home/Company/News/Digia-launches-Qt-5-cross-platform-application-development-and-UI-framework/). Важные изменения - переход на C++11, остальное, кмк, мелочи.
-* [Moonbase - система построения анимации для дебилов](http://moonbase.com/) :) Ну, не буквально, а скорее для тех, кто не умеет программировать совсем. Идея очень красивая, реализация не самая удачная правда. Но я прошел немножко челленджей - работает.
+* [Moonbase - система построения анимации для дебилов](http://moonbase.com/) :) Ну, не буквально, а скорее для тех, кто не умеет программировать совсем. Идея очень красивая, реализация не самая удачная, правда. Но я прошел немножко челленджей - работает.
 * [Двухгигапиксельная панорама Эвереста](https://s3.amazonaws.com/Gigapans/EBC_Pumori_050112_8bit_FLAT/EBC_Pumori_050112_8bit_FLAT.html). Изучал почти 15 минут. Я нашел группу альпинистов, одного непонятного мужика и непонятное растение[.](http://f.cl.ly/items/3w2j2h0a1a3h0M1K0i3l/ppl.jpg) А вы? Делитесь скринами в комментариях!
 * [Линуксоиды дождались, публичная бета Steam!](http://steamcommunity.com/games/221410/announcements/detail/1747660173332716773). Только не забывайте читать EULA, там есть несколько подводных камней. А еще интересно, что в качестве трекера, вместо всяких багзил смело [используется гитхаб](https://github.com/ValveSoftware/steam-for-linux/issues). И там даже уже есть все те баги, которые нашел я.
-* Кстати об играх. Началась [7ая распродажа игр Humble Indie Bundle](http://www.humblebundle.com/#7). Все игры есть в версиях для Win, Mac и Linux. Можете заплатить сколько угодно денег и получить 7 отличных игр от независимых разработчиков. Но я очень рекомендую заплатить чуть больше, чем средний заплативший (сейчас это $6.36) чтобы получить еще и офигенную игру Legend of Grimrock. Это такая RPG в стиле классического Dungeon Master, если вы понимаете о чем я. Бонусом, кстати, еще идут отличные саундтреки от игр.
+* Кстати об играх. Началась [7ая распродажа игр Humble Indie Bundle](http://www.humblebundle.com/#7). Все игры есть в версиях для Win, Mac и Linux. Можете заплатить сколько угодно денег и получить 7 отличных игр от независимых разработчиков. Но я очень рекомендую заплатить чуть больше, чем средний заплативший (сейчас это $6.36), чтобы получить еще и офигенную игру Legend of Grimrock. Это такая RPG в стиле классического Dungeon Master, если вы понимаете, о чем я. Бонусом, кстати, еще идут отличные саундтреки от игр.
